--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <h1 class="left-align">The Best Fitness Gym in the Town</h1>
           <p>Gym fitness is a dynamic avenue for physical transformation and overall well-being. It encompasses a spectrum of activities aimed at enhancing strength, endurance, flexibility, and cardiovascular health. From weightlifting to cardio exercises, gym fitness offers a versatile platform catering to diverse fitness goals and preferences.
 
-            One of the key attractions of gym fitness is its adaptability to individual needs. Whether someone seeks to bulk up, trim down, or simply improve their overall health, the gym provides a plethora of equipment and routines to suit their objectives. Moreover, the structured environment of a gym, with its array of machines and guided programs, offers a sense of direction and support for those navigating their fitness journey.</p>
+            One of the key attractions of gym fitness is its adaptability to individual needs. Whether someone seeks to bulk up, trim down, or simply improve their overall health, gym provides a plethora of equipment and routines to suit their objectives. Moreover, the structured environment of a gym, with its array of machines and guided programs, offers a sense of direction and support for those navigating their fitness journey.</p>
             
       </div>
       <div class="top-right px-3">
