--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
           <h1 class="left-align">The Best Fitness Gym in the Town</h1>
           <p>Gym fitness is a dynamic avenue for physical transformation and overall well-being. It encompasses a spectrum of activities aimed at enhancing strength, endurance, flexibility, and cardiovascular health. From weightlifting to cardio exercises, gym fitness offers a versatile platform catering to diverse fitness goals and preferences.
 
-            One of the key attractions of gym fitness is its adaptability to individual needs. Whether someone seeks to bulk up, trim down, or simply improve their overall health, gym provides a plethora of equipment and routines to suit their objectives. Moreover, the structured environment of a gym, with its array of machines and guided programs, offers a sense of direction and support for those navigating their fitness journey.</p>
+            One of the key attractions of gym fitness is its adaptability to individual needs. 
+            Whether someone seeks to bulk up, trim down, or simply improve their overall health,
+             gym provides a plethora of equipment and routines to suit their objectives. 
+             </p>
             
       </div>
       <div class="top-right px-3">
@@ -64,9 +67,9 @@
       </div>
   </div>
   </section>
-
+<br>
       <hr>
-      <h3>Check for the Relevant Body Exercises Manually</h3>
+      <h3 class="items-center">Check for the Body Exercises Manually</h3>
       <hr>
       <strong>Enter the Body Part: </strong><input type="text" name="" id="it" placeholder="Input the Part">
       <br>
